--- a/Tema2/index1.html
+++ b/Tema2/index1.html
@@ -11,7 +11,7 @@
 <hr>
 <h2> Розмір шрифта </h2>
 <h3> <Font size = 1> Розмір 1 </Font>
-<Font size = 7> Розмір 7 </Font>
+<Font size = 7> Розмір 7 </Font> <br>
 <small> маленький </small>
 <bib> Великий </bib> </h3>
 <hr>
