--- a/Tema2/index1.html
+++ b/Tema2/index1.html
@@ -6,12 +6,12 @@
 <h1> Форматування тексту </h1>
 <hr>
 <h2> Стиль шрифта </h2>
-<h3> <Font face = "Ariel"> Шрифт Arial </Font> 
+<h3> <Font face = "Ariel"> Шрифт Arial </Font><br> 
 <Font face = "Courier New"> Шрифт Courier New </Font> </h3>
 <hr>
 <h2> Розмір шрифта </h2>
 <h3> <Font size = 1> Розмір 1 </Font>
-<Font size = 7> Розмір 7 </Font> <br>
+<Font size = 7> Розмір 7 </Font><br>
 <small> маленький </small>
 <bib> Великий </bib> </h3>
 <hr>
