--- a/Tema2/index1.html
+++ b/Tema2/index1.html
@@ -17,7 +17,7 @@
 <hr>
 <h2> Колір шрифта </h2>
 <h3> <Font color = "blue"> Синій </Font>
-<Font color = "red"> Червоний </Font> <h3>
+<Font color = "red"> Червоний </Font> </h3>
 <hr>
 <h2> Виокремлення </h2>
 <h3> <b> Жирний </b>
