--- a/Tema2/index1.html
+++ b/Tema2/index1.html
@@ -3,28 +3,10 @@
 Класна робота
 </head>
 <body>
-<h1> Форматування тексту </h1>
-<hr>
-<h2> Стиль шрифта </h2>
-<h3> <Font face = "Ariel"> Шрифт Arial </Font><br> 
-<Font face = "Courier New"> Шрифт Courier New </Font> </h3>
-<hr>
-<h2> Розмір шрифта </h2>
-<h3> <Font size = 1> Розмір 1 </Font>
-<Font size = 7> Розмір 7 </Font><br>
-<small> маленький </small>
-<bib> Великий </bib> </h3>
-<hr>
-<h2> Колір шрифта </h2>
-<h3> <Font color = "blue"> Синій </Font>
-<Font color = "red"> Червоний </Font> </h3>
-<hr>
-<h2> Виокремлення </h2>
-<h3> <b> Жирний </b>
-<i> Курсив </i>
-<u> Підкреслений </u>
-<s> Перекреслений </s> </h3>
-<hr>
-<h2> Індекси </h2>
-<h3> Надрядковий <sub> Підрядковий </sub> <h3>
+  <ul>
+    <li> <a href = "index1.html/index11.html"> Завдання 1а </a> </li>
+    <li> <a href = "index1.html/index12.html"> Завдання 1b </a> </li>
+    <li> < a href = "index1/html/index13.html"> Завдання 1с </a> </li>
+  </ul>
+  </body>
 </html>
