--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <td class="td2"><A href="Tema2/lesson2.pdf">ФОРМАТУВАННЯ ТЕКСТУ. СПИСКИ. ГІПЕРПОСИЛАННЯ.</a></td>
 <td class="td3">
 <Ul>
-<Li><a href="Tema2/index1.html">Класна робота <a href="Tema2/index1.html/index11.html"> Завдання 1а </a></a></Li>
+<Li><a href="Tema2/index1.html">Класна робота</a></Li>
 <li><a href="Tema2/index2.html">Домашня робота</a></li>
 </ul>
 </td
