--- a/Tema2/index1.html
+++ b/Tema2/index1.html
@@ -4,9 +4,9 @@
 </head>
 <body>
   <ul>
-    <li> <a href = "Tema2/index11.html"> Завдання 1а </a> </li>
-    <li> <a href = "Tema2/index12.html"> Завдання 1b </a> </li>
-    <li> <a href = "Tema2/index13.html"> Завдання 1с </a> </li>
+    <li> <a href = "Tema2/index1/index11.html"> Завдання 1а </a> </li>
+    <li> <a href = "Tema2/index1/index12.html"> Завдання 1b </a> </li>
+    <li> <a href = "Tema2/index1/index13.html"> Завдання 1с </a> </li>
   </ul>
   </body>
 </html>
