--- a/Tema2/index1/index12.html
+++ b/Tema2/index1/index12.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<h1> Форматування тексту. Абзац </h1>
-<hr>
+<h1><Font face="GothicE" color="#CB4335"> Форматування тексту. Абзац </Font></h1>
+<hr color="#F39C12" size = 3>
 </head>
 <body>
 <h2> Вирівнювання абзацу </h2>
