--- a/Tema2/index1/index12.html
+++ b/Tema2/index1/index12.html
@@ -1,23 +1,23 @@
 <html>
 <head>
-<h1><Font face="GothicE" color="#CB4335"> Форматування тексту. Абзац </Font></h1>
-<hr color="#F39C12" size = 3>
+  <h1><Font face="GothicE" color="#CB4335" size=5><b> Форматування тексту. Абзац </b></Font></h1>
+<hr color="#F39C12" size = 4>
 </head>
 <body>
 <h2> Вирівнювання абзацу </h2>
-<h3> <p align = left> Вирівнювання до лівого краю </p>
+<Font face="Calibri Light" size=4 color="#E74C3C"><p align = left> Вирівнювання до лівого краю </p>
 <p align = center> Вирівнювання по центру </p>
 <p align = right> Вирівнювання до правого краю </p>
 <p align = justify> Вирівнювання по ширині. Вирівнювання по ширині. Вирівнювання по ширині. Вирівнювання по ширині. Вирівнювання по ширині. </p>
 <p> Перехід <br>
 на <br>
 новий <br>
-рядок </p>
-<hr>
-Горизонтальна лінія
-<hr>
-<h1> Заголовок 1 </h1>
+рядок </p> </Font>
+<hr color="#F39C12" size = 3>
+  <Font face="Calibri Light" size=4 color="#E74C3C">Горизонтальна лінія</Font>
+<hr color="#F39C12" size = 3>
+<h1><Font color="#E74C3C"> Заголовок 1 </h1>
 <h3> Заголовок 3 </h3>
-<h6> Заголовок 6 </h6>
+<h6> Заголовок 6 </h6></Font>
 </body>
 </html>
