--- a/Tema2/index1/index12.html
+++ b/Tema2/index1/index12.html
@@ -4,8 +4,8 @@
 <hr color="#F39C12" size = 4>
 </head>
 <body>
-  <Font face="Calibri" size=5 color="#E74C3C"> Вирівнювання абзацу </Font>
-<Font face="Calibri" size=4 color="#E74C3C"><p align = left> Вирівнювання до лівого краю </p>
+  <Font face="Calibri" size=5 color="#E74C3C"><b> Вирівнювання абзацу</b></Font>
+<Font face="Calibri" size=5 color="#E74C3C"><p align = left> Вирівнювання до лівого краю </p>
 <p align = center> Вирівнювання по центру </p>
 <p align = right> Вирівнювання до правого краю </p>
 <p align = justify> Вирівнювання по ширині. Вирівнювання по ширині. Вирівнювання по ширині. Вирівнювання по ширині. Вирівнювання по ширині. </p>
@@ -14,7 +14,7 @@
 новий <br>
 рядок </p> </Font>
 <hr color="#F39C12" size = 3>
-<Font face="Calibri" size=5 color="#E74C3C">Горизонтальна лінія</Font>
+  <Font face="Calibri" size=5 color="#E74C3C"><b>Горизонтальна лінія</b></Font>
 <hr color="#F39C12" size = 3>
 <h1><Font color="#E74C3C"> Заголовок 1 </h1>
 <h3> Заголовок 3 </h3>
