--- a/Tema2/index1/index13.html
+++ b/Tema2/index1/index13.html
@@ -1,21 +1,21 @@
 <html>
 <head>
-<h1> Списки <h2>
-<hr>
+<h1> <Font face="Segoe Print" size=6 color="#1E8449"> Списки </Font> </h1>
+<hr color"#52BE80" size=3>
 </head>
 <body>
-<ol> <h2> Нумерований список <h2>
-<li> Арабська цифра 1 </li>
+<ol><h2><Font face="Segoe Print" size=5 color="#27AE60"> Нумерований список </Font><h2>
+<Font face="Segoe Print" size=4 color="#45B39D"><li> Арабська цифра 1 </li>
 <li> Велика літера А </li>
 <li> Мала літера а </li>
 <li> Велика римська I </li>
-<li> Мала римська i </li>
+<li> Мала римська i </li></Font>
 </ol>
 <hr>
-<ul type="square"> <h2> Маркерований список <h2>
-<li> disk </li>
+<ul type="square"> <h2><Font face="Segoe Print" size=5 color="#27AE60"> Маркерований список </Font><h2>
+<Font face="Segoe Print" size=4 color="#45B39D"><li> disk </li>
 <li> circle </li>
-<li> square </li>
+<li> square </li></Font>
 </ul>
 </body>
 </html>
