--- a/Tema2/index1/index13.html
+++ b/Tema2/index1/index13.html
@@ -1,19 +1,19 @@
 <html>
 <head>
  <h1> <Font face="Segoe Print" size=7 color="#1E8449"><b> Списки </b></Font> </h1>
-<hr color"#A2D9CE" size=5>
+<hr color"#01DFA5" size=5>
 </head>
 <body>
 <ol><h2><Font face="Segoe Print" size=6 color="#27AE60"> Нумерований список </Font><h2>
-<Font face="Segoe Print" size=5 color="#45B39D"><li> Арабська цифра 1 </li>
+<Font face="Segoe Print" size=4 color="#45B39D"><li> Арабська цифра 1 </li>
 <li> Велика літера А </li>
 <li> Мала літера а </li>
 <li> Велика римська I </li>
 <li> Мала римська i </li></Font>
 </ol>
-<hr color"#A2D9CE" size=5>
-<ul type="square"> <h2><Font face="Segoe Print" size=5 color="#27AE60"> Маркерований список </Font><h2>
-<Font face="Segoe Print" size=5 color="#45B39D"><li> disk </li>
+<hr color"#01DFA5" size=5>
+<ul type="square"> <h2><Font face="Segoe Print" size=6 color="#27AE60"> Маркерований список </Font><h2>
+<Font face="Segoe Print" size=4 color="#45B39D"><li> disk </li>
 <li> circle </li>
 <li> square </li></Font>
 </ul>
