--- a/Tema2/index2/index21.html
+++ b/Tema2/index2/index21.html
@@ -11,15 +11,15 @@
 </ul>
 <a name="Еволюційне вчення. Погляди Жана-Батіста Ламарка"><Font face="Segoe Print" color="#5499C7" size=6>Еволюційне вчення. Погляди Жана-Батіста Ламарка</Font></a>
 <Font face="Segoe Print" color="#424949" size=4>
-<p align=right>Еволюційне вчення - наука про фактори, механізми, загальні закономірності та наслідки еволюції. Ще давньогрецькі філософи, як Гераклікт Ефеський і Демокрит 
+<p align=left>Еволюційне вчення - наука про фактори, механізми, загальні закономірності та наслідки еволюції. Ще давньогрецькі філософи, як Гераклікт Ефеський і Демокрит 
 висловлювали певні думки про історичний розвиток живих істот. Одним із перших біологів, який створив цілісну теорію еволюції став французький зоолог, анатом і натураліст
 Жан-Батіст Ламарк. Сучасники не оцінили його теорію, але вже півстоліття потому вона стала предметом палких дискусій, які не припиняються і сьогодні. 
  У чому ж полягає теорія Ламарка?</p> 
-<p align=right>Перший закон Ламарка говорить про те, що організми пристосовуються до умов навколишнього середовища.Для пояснення цього вчений сформулював 
+<p align=left>Перший закон Ламарка говорить про те, що організми пристосовуються до умов навколишнього середовища.Для пояснення цього вчений сформулював 
 декілька «законів». Перш за все, це закон «Тренування чи не тренування органів». Наприклад: жирафи постійно витягують шию, щоб дотягнутися
 до листків над головою. Тому їхні шиї стають довшими. Кротові, який мешкає під землею, очі лише заважають, тому вони поступово зникають.
  Якщо тварина тренує свій орган, вона його розвиває. Якщо не тренує — орган поступово зникає.</p>
-<p align=right>Другий закон Ламарка — це «Закон успадкування набутих ознак». Корисні ознаки, набуті твариною з життя, за Ламарком, передаються нащадкам.
+<p align=left>Другий закон Ламарка — це «Закон успадкування набутих ознак». Корисні ознаки, набуті твариною з життя, за Ламарком, передаються нащадкам.
  Жирафи передали нащадкам довгу шию та довгі ноги, кроти — очі, які не бачать.</p>
 <ul type=disk>Отже, за Ламарком:
 <li>еволюція - процес набуття корисних ознак</li>
@@ -28,17 +28,17 @@
 </ul></Font>
 <a name="Еволюційні погляди Чарльза Дарвіна"><Font face="Segoe Print" color="#5499C7" size=6>Еволюційні погляди Чарльза Дарвіна</Font></a>
 <Font face="Segoe Print" color="#424949" size=4>
- <p align=right>Чарльз Дарвін - англійський науковець, що створив теорію еволюції і запропонував разом з Альфредом Расселом Воллесом принципи природного добору.
+ <p align=left>Чарльз Дарвін - англійський науковець, що створив теорію еволюції і запропонував разом з Альфредом Расселом Воллесом принципи природного добору.
  Після досліджень у Південній Америці і на Галапагоських островах, де він був під час навколосвітньої подорожі на кораблі «Бігль» 1831–1836,
  Дарвін опублікував книгу «Походження видів шляхом природного добору», в якій пояснював еволюційний процес принципами природного й статевого добору.
  Його теорія викликала жорстокі суперечки, оскільки, на думку деяких людей, суперечила Книзі Буття Біблії (див. Креаціонізм).</p>
- <p align=right>За Ч. Дарвіном, еволюція відбувається на підставі спадкової мінливості під дією боротьби за існування, наслідком якої є природний добір.Саме їх він
+ <p align=left>За Ч. Дарвіном, еволюція відбувається на підставі спадкової мінливості під дією боротьби за існування, наслідком якої є природний добір.Саме їх він
  вважав рушійними факторами еволюції. Ч. Дарвін виділяв три форми боротьби за існування: внутрішньовидову, міжвидову та боротьбу з несприятливими
  умовами навколишнього середовища. На відміну від Ламарка, Ч. Дарвін припускав, що мінливість може бути неспадковою та спадковою.</p></Font>
- <p align=right><a name="Основні положення сучасної теорії еволюції"><Font face="Segoe Print" color="#5499C7" size=6>Основні положення сучасної теорії еволюції</Font></a></p>
+ <p align=left><a name="Основні положення сучасної теорії еволюції"><Font face="Segoe Print" color="#5499C7" size=6>Основні положення сучасної теорії еволюції</Font></a></p>
  <Font face="Segoe Print" color="#424949" size=4><p align=right>Ще за життя Ч. Дарвіна його теорія знайшла своїх послідовників. Хоча, були й такі дослідники,
  що вказувала на факти, які теорія не могла пояснити(дані генетичних досліджень щодо мутацій не можна було пояснитиз точки зору теорії).</p>
- <p align=right>Зусиллями багатьох учених у 1920-х — 1950-х була сформулювана теорія, яка поєднала у собікласичний дарвінізм, учення про мутації та уявлення про
+ <p align=left>Зусиллями багатьох учених у 1920-х — 1950-х була сформулювана теорія, яка поєднала у собікласичний дарвінізм, учення про мутації та уявлення про
  популяцію як елементарну одиницю еволюції - синтетичну теорію еволюції.
  <ul type=disk>За синтетичною теорією еволюції:
  <li>Мутації - головне джерело спадкової мінливості;</li>
