--- a/Tema2/index2/index21.html
+++ b/Tema2/index2/index21.html
@@ -36,7 +36,7 @@
  вважав рушійними факторами еволюції. Ч. Дарвін виділяв три форми боротьби за існування: внутрішньовидову, міжвидову та боротьбу з несприятливими
  умовами навколишнього середовища. На відміну від Ламарка, Ч. Дарвін припускав, що мінливість може бути неспадковою та спадковою.</p></Font>
  <p align=left><a name="Основні положення сучасної теорії еволюції"><Font face="Segoe Print" color="#5499C7" size=6>Основні положення сучасної теорії еволюції</Font></a></p>
- <Font face="Segoe Print" color="#424949" size=4><p align=right>Ще за життя Ч. Дарвіна його теорія знайшла своїх послідовників. Хоча, були й такі дослідники,
+ <Font face="Segoe Print" color="#424949" size=4><p align=left>Ще за життя Ч. Дарвіна його теорія знайшла своїх послідовників. Хоча, були й такі дослідники,
  що вказувала на факти, які теорія не могла пояснити(дані генетичних досліджень щодо мутацій не можна було пояснитиз точки зору теорії).</p>
  <p align=left>Зусиллями багатьох учених у 1920-х — 1950-х була сформулювана теорія, яка поєднала у собікласичний дарвінізм, учення про мутації та уявлення про
  популяцію як елементарну одиницю еволюції - синтетичну теорію еволюції.
