--- a/Tema2/index2.html
+++ b/Tema2/index2.html
@@ -5,7 +5,7 @@
 <body>
 <ul>
 <li> <a href="index2/index21.html"> Варіант 1(за зразком веб-документа) </a></li>
-<li> <a heref="index2/index22.html">Варіант 2(за зразком гіпертексту) </a></li>
+<li> <a href="index2/index22.html">Варіант 2(за зразком гіпертексту) </a></li>
 </ul>
 </body>
 </html>
