--- a/Tema2/index2/index21.html
+++ b/Tema2/index2/index21.html
@@ -4,7 +4,7 @@
 <hr color="#5499C7" size=4>
 </head>
 <body>
-<ul><Font face="Segoe Print" color="#9B59B6" size=5> Зміст </Font>
+ <ul><a name="До змісту"><Font face="Segoe Print" color="#9B59B6" size=5> Зміст </Font></a>
 <Font face="Segoe Print" color="#5499C7" size=4> <li><a href="#Еволюційне вчення. Погляди Жана-Батіста Ламарка">Еволюційне вчення. Погляди Жана-Батіста Ламарка</a></li>
 <li><a href="#Еволюційні погляди Чарльза Дарвіна">Еволюційні погляди Чарльза Дарвіна</a></li>
 <li><a href="#Основні положення сучасної теорії еволюції">Основні положення сучасної теорії еволюції</a></li></Font>
@@ -25,7 +25,8 @@
 <li>еволюція - процес набуття корисних ознак</li>
 <li>корисні ознаки, набуті твариною протягом життя передаються нащадкам (учений вважав будь-яку мінливість спадковою; на сьогоднішній день доведено, що це не так)</li>
 <li>існує внутрішнє прагнення організму до прогресу</li>
-</ul></Font>
+ </ul></Font><br>
+ <a href="До змісту"><Font face="Segoe Print" color="#9B59B6" size=5>До змісту</Font></a>
 <a name="Еволюційні погляди Чарльза Дарвіна"><Font face="Segoe Print" color="#5499C7" size=6>Еволюційні погляди Чарльза Дарвіна</Font></a>
 <Font face="Segoe Print" color="#424949" size=4>
  <p align=left>Чарльз Дарвін - англійський науковець, що створив теорію еволюції і запропонував разом з Альфредом Расселом Воллесом принципи природного добору.
@@ -34,7 +35,8 @@
  Його теорія викликала жорстокі суперечки, оскільки, на думку деяких людей, суперечила Книзі Буття Біблії (див. Креаціонізм).</p>
  <p align=left>За Ч. Дарвіном, еволюція відбувається на підставі спадкової мінливості під дією боротьби за існування, наслідком якої є природний добір.Саме їх він
  вважав рушійними факторами еволюції. Ч. Дарвін виділяв три форми боротьби за існування: внутрішньовидову, міжвидову та боротьбу з несприятливими
- умовами навколишнього середовища. На відміну від Ламарка, Ч. Дарвін припускав, що мінливість може бути неспадковою та спадковою.</p></Font>
+ умовами навколишнього середовища. На відміну від Ламарка, Ч. Дарвін припускав, що мінливість може бути неспадковою та спадковою.</p></Font><br>
+ <a href="До змісту"><Font face="Segoe Print" color="#9B59B6" size=5>До змісту</Font></a>
  <p align=left><a name="Основні положення сучасної теорії еволюції"><Font face="Segoe Print" color="#5499C7" size=6>Основні положення сучасної теорії еволюції</Font></a></p>
  <Font face="Segoe Print" color="#424949" size=4><p align=left>Ще за життя Ч. Дарвіна його теорія знайшла своїх послідовників. Хоча, були й такі дослідники,
  що вказувала на факти, які теорія не могла пояснити(дані генетичних досліджень щодо мутацій не можна було пояснитиз точки зору теорії).</p>
@@ -50,6 +52,7 @@
  <ul type=disk>На відміну від синтетичної теорії еволюцій за сучасними поглядами:
  <li>Еволюція не обов'язково йде поступово;</li>
  <li>Природний відбір не є єдиним рушієм еволюції.</li>
- </ul></Font>
+ </ul></Font><br>
+ <a href="До змісту"><Font face="Segoe Print" color="#9B59B6" size=5>До змісту</Font></a>
  </body>
  </html>
