--- a/Tema2/index2/index21.html
+++ b/Tema2/index2/index21.html
@@ -26,7 +26,7 @@
 <li>корисні ознаки, набуті твариною протягом життя передаються нащадкам (учений вважав будь-яку мінливість спадковою; на сьогоднішній день доведено, що це не так)</li>
 <li>існує внутрішнє прагнення організму до прогресу</li>
  </ul></Font><br>
- <a href="До змісту"><Font face="Segoe Print" color="#9B59B6" size=5>До змісту</Font></a>
+ <a href="До змісту"><Font face="Segoe Print" color="#9B59B6" size=5>До змісту</Font></a><br>
 <a name="Еволюційні погляди Чарльза Дарвіна"><Font face="Segoe Print" color="#5499C7" size=6>Еволюційні погляди Чарльза Дарвіна</Font></a>
 <Font face="Segoe Print" color="#424949" size=4>
  <p align=left>Чарльз Дарвін - англійський науковець, що створив теорію еволюції і запропонував разом з Альфредом Расселом Воллесом принципи природного добору.
