--- a/Tema2/index2/index21.html
+++ b/Tema2/index2/index21.html
@@ -26,7 +26,7 @@
 <li>корисні ознаки, набуті твариною протягом життя передаються нащадкам (учений вважав будь-яку мінливість спадковою; на сьогоднішній день доведено, що це не так)</li>
 <li>існує внутрішнє прагнення організму до прогресу</li>
  </ul></Font><br>
- <a href="До змісту"><Font face="Segoe Print" color="#9B59B6" size=5>До змісту</Font></a><br>
+ <a href="#До змісту"><Font face="Segoe Print" color="#9B59B6" size=5>До змісту</Font></a><br>
 <a name="Еволюційні погляди Чарльза Дарвіна"><Font face="Segoe Print" color="#5499C7" size=6>Еволюційні погляди Чарльза Дарвіна</Font></a>
 <Font face="Segoe Print" color="#424949" size=4>
  <p align=left>Чарльз Дарвін - англійський науковець, що створив теорію еволюції і запропонував разом з Альфредом Расселом Воллесом принципи природного добору.
@@ -36,7 +36,7 @@
  <p align=left>За Ч. Дарвіном, еволюція відбувається на підставі спадкової мінливості під дією боротьби за існування, наслідком якої є природний добір.Саме їх він
  вважав рушійними факторами еволюції. Ч. Дарвін виділяв три форми боротьби за існування: внутрішньовидову, міжвидову та боротьбу з несприятливими
  умовами навколишнього середовища. На відміну від Ламарка, Ч. Дарвін припускав, що мінливість може бути неспадковою та спадковою.</p></Font><br>
- <a href="До змісту"><Font face="Segoe Print" color="#9B59B6" size=5>До змісту</Font></a>
+ <a href="#До змісту"><Font face="Segoe Print" color="#9B59B6" size=5>До змісту</Font></a>
  <p align=left><a name="Основні положення сучасної теорії еволюції"><Font face="Segoe Print" color="#5499C7" size=6>Основні положення сучасної теорії еволюції</Font></a></p>
  <Font face="Segoe Print" color="#424949" size=4><p align=left>Ще за життя Ч. Дарвіна його теорія знайшла своїх послідовників. Хоча, були й такі дослідники,
  що вказувала на факти, які теорія не могла пояснити(дані генетичних досліджень щодо мутацій не можна було пояснитиз точки зору теорії).</p>
@@ -53,6 +53,6 @@
  <li>Еволюція не обов'язково йде поступово;</li>
  <li>Природний відбір не є єдиним рушієм еволюції.</li>
  </ul></Font><br>
- <a href="До змісту"><Font face="Segoe Print" color="#9B59B6" size=5>До змісту</Font></a>
+ <a href="#До змісту"><Font face="Segoe Print" color="#9B59B6" size=5>До змісту</Font></a>
  </body>
  </html>
