--- a/Tema3/index1.html
+++ b/Tema3/index1.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<Font face="Arial Black" size=6> Календар 2019 р. </Font>
+<p align=center><Font face="Arial Black" size=6> Календар 2019 р. </Font></p>
 </head>
 <body>
-<table align=center bordercolor="black" border=5px>
+<table align=center bordercolor="black" border=5px height=100px width=300px cols=7>
 <caption><Font face="Bookman Old Style" size=5>Січень</Font></caption>
 <tr><Font face="Bookman Old Style" size=4 color="white">
 <th bgcolor="#2C3E50"><Font face="Bookman Old Style" size=4 color="white">Понеділок</Font></th>
@@ -11,8 +11,8 @@
 <th bgcolor="#2C3E50"><Font face="Bookman Old Style" size=4 color="white">Середа</Font></th>
 <th bgcolor="#2C3E50"><Font face="Bookman Old Style" size=4 color="white">Четвер</Font></th>
 <th bgcolor="#2C3E50"><Font face="Bookman Old Style" size=4 color="white">П'ятниця</Font></th>
-<th bgcolor="#D2B4DE"><Font face="Bookman Old Style" size=4 color="white">Субота</Font></th>
-<th bgcolor="#CD6155"><Font face="Bookman Old Style" size=4 color="white">Неділя</Font></th>
+<th bgcolor="#8E44AD"><Font face="Bookman Old Style" size=4 color="white">Субота</Font></th>
+<th bgcolor="#A93226"><Font face="Bookman Old Style" size=4 color="white">Неділя</Font></th>
 </tr>
 <tr>
 <td></td>
@@ -20,8 +20,8 @@
 <td><Font face="Bookman Old Style" size=4>2</Font></td>
 <td><Font face="Bookman Old Style" size=4>3</Font></td>
 <td><Font face="Bookman Old Style" size=4>4</Font></td>
-<td><Font face="Bookman Old Style" size=4 color="#D2B4DE">5</Font></td>
-<td><Font face="Bookman Old Style" size=4 color="#CD6155">6</Font></td>
+<td><Font face="Bookman Old Style" size=4 color="#8E44AD">5</Font></td>
+<td><Font face="Bookman Old Style" size=4 color="#A93226">6</Font></td>
 </tr>
 <tr>
 <td><Font face="Bookman Old Style" size=4>7</Font></td>
@@ -29,8 +29,8 @@
 <td><Font face="Bookman Old Style" size=4>9</Font></td>
 <td><Font face="Bookman Old Style" size=4>10</Font></td>
 <td><Font face="Bookman Old Style" size=4>11</Font></td>
-<td><Font face="Bookman Old Style" size=4 color="#D2B4DE">12</Font></td>
-<td><Font face="Bookman Old Style" size=4 color="#CD6155">13</Font></td>
+<td><Font face="Bookman Old Style" size=4 color="#8E44AD">12</Font></td>
+<td><Font face="Bookman Old Style" size=4 color="#A93226">13</Font></td>
 </tr>
 <tr>
 <td><Font face="Bookman Old Style" size=4>14</Font></td>
@@ -38,17 +38,17 @@
 <td><Font face="Bookman Old Style" size=4>16</Font></td>
 <td><Font face="Bookman Old Style" size=4>17</Font></td>
 <td><Font face="Bookman Old Style" size=4>18</Font></td>
-<td><Font face="Bookman Old Style" size=4 color="#D2B4DE">19</Font></td>
-<td><Font face="Bookman Old Style" size=4 color="#CD6155">20</Font></td>
+<td><Font face="Bookman Old Style" size=4 color="#8E44AD">19</Font></td>
+<td><Font face="Bookman Old Style" size=4 color="#A93226">20</Font></td>
 </tr>
 <tr>
 <td><Font face="Bookman Old Style" size=4>21</Font></td>
-<td><Font face="Bookman Old Style" size=4>22</Font>td>
+<td><Font face="Bookman Old Style" size=4>22</Font></td>
 <td><Font face="Bookman Old Style" size=4>23</Font></td>
 <td><Font face="Bookman Old Style" size=4>24</Font></td>
 <td><Font face="Bookman Old Style" size=4>25</Font></td>
-<td><Font face="Bookman Old Style" size=4 color="#D2B4DE">26</Font></td>
-<td><Font face="Bookman Old Style" size=4 color="#CD6155">27</Font></td>
+<td><Font face="Bookman Old Style" size=4 color="#8E44AD">26</Font></td>
+<td><Font face="Bookman Old Style" size=4 color="#A93226">27</Font></td>
 <tr>
 <td><Font face="Bookman Old Style" size=4>28</Font></td>
 <td><Font face="Bookman Old Style" size=4>29</Font></td>
