--- a/Tema3/index2.html
+++ b/Tema3/index2.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-Домашня робота
+Домашня робота<br>
 </head>
 <body>
-<a href="index2/index21.html">Варіант 1(за зразком веб-документа)</a>
+<a href="index2/index21.html">Варіант 1(за зразком веб-документа)</a><br>
 <a href="index1/index22.html">Варіант 2(за зразком гіпертексту)</a>
 </body>
 </html>
