--- a/Tema3/index2/index21.html
+++ b/Tema3/index2/index21.html
@@ -1,6 +1,73 @@
 <html>
 <head>
-Розклад уроків у школі
+  <Font face="Segoe Print" size=7 color=#138D75>Розклад уроків у школі</Font>
 </head>
 <body>
 <table align=center border=5px background="https://st2.depositphotos.com/1273403/7705/i/950/depositphotos_77051507-stock-photo-turquoise-brick-background.jpg" cols=6>
+  <tr><Font face="Segoe Print" size=6 color="black">
+    <th> Номер уроку</th>
+    <th>Понеділок</th>
+    <th>Вівторок</th>
+    <th>Середа</th>
+    <th>Четвер</th>
+    <th>П'ятниця</th></Font>
+  </tr>
+  <Font face="Segoe Print" size=4 color="black"><tr>
+    <td>1</td>
+    <td>Укр.м.</td>
+    <td>Геометрія</td>
+    <td>Інформатика</td>
+    <td>Ф-ра</td>
+    <td>Укр.літ.</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>Укр.літ.</td>
+    <td>Геометрія</td>
+    <td>Пол.м.</td>
+    <td>Англ.м./Географія</td>
+    <td>Алгебра</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>Ф-ра</td>
+    <td>Укр.м.</td>
+    <td>Правознавство</td>
+    <td>Географія</td>
+    <td>Англ.м.</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>Осн.Здр.</td>
+    <td>Хр.ет./Історія</td>
+    <td>Хімія</td>
+    <td>Фізика</td>
+    <td>Праця</td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>Хімія</td>
+    <td>Історія</td>
+    <td>Ф-ра/td>
+    <td>Біологія/td>
+    <td>Зарубіж.</td>
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>Пол.м.</td>
+    <td>Фізика</td>
+    <td>Зарубіж.</td>
+    <td>Алгебра</td>
+    <td>Фізика</td>
+  </tr>
+  <tr>
+    <td>7</td>
+    <td>Англ.м.</td>
+    <td>Біологія</td>
+    <td>Мистецтво</td>
+    <td>Всесвітня</td>
+    <td>Інформатика</td>
+    </tr></Font>
+  </table>
+  </body>
+</html>
