--- a/Tema3/index2/index21.html
+++ b/Tema3/index2/index21.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <table align=center border=5px background="https://st2.depositphotos.com/1273403/7705/i/950/depositphotos_77051507-stock-photo-turquoise-brick-background.jpg" cols=6>
-  <tr><Font face="Segoe Print" size=6 color="black">
+  <tr><Font face="Segoe Print" size=6 color="white">
     <th> Номер уроку</th>
     <th>Понеділок</th>
     <th>Вівторок</th>
@@ -12,7 +12,7 @@
     <th>Четвер</th>
     <th>П'ятниця</th></Font>
   </tr>
-  <Font face="Segoe Print" size=4 color="black"><tr>
+  <Font face="Segoe Print" size=4 color="white"><tr>
     <td>1</td>
     <td>Укр.м.</td>
     <td>Геометрія</td>
