--- a/Tema3/index2/index21.html
+++ b/Tema3/index2/index21.html
@@ -1,73 +1,73 @@
 <html>
 <head>
-  <Font face="Segoe Print" size=7 color=#138D75>Розклад уроків у школі</Font>
+  <p align=center><Font face="Segoe Print" size=7 color=#138D75>Розклад уроків у школі</Font></p>
 </head>
 <body>
 <table align=center border=5px background="https://st2.depositphotos.com/1273403/7705/i/950/depositphotos_77051507-stock-photo-turquoise-brick-background.jpg" cols=6>
-  <tr><Font face="Segoe Print" size=6 color="white">
-    <th> Номер уроку</th>
-    <th>Понеділок</th>
-    <th>Вівторок</th>
-    <th>Середа</th>
-    <th>Четвер</th>
-    <th>П'ятниця</th></Font>
-  </tr>
-  <Font face="Segoe Print" size=4 color="white"><tr>
-    <td>1</td>
-    <td>Укр.м.</td>
-    <td>Геометрія</td>
-    <td>Інформатика</td>
-    <td>Ф-ра</td>
-    <td>Укр.літ.</td>
+  <tr>
+    <th><Font face="Segoe Print" size=6 color="white">Номер уроку</Font></th>
+    <th><Font face="Segoe Print" size=6 color="white">Понеділок</Font></th>
+    <th><Font face="Segoe Print" size=6 color="white">Вівторок</Font></th>
+    <th><Font face="Segoe Print" size=6 color="white">Середа</Font></th>
+    <th><Font face="Segoe Print" size=6 color="white">Четвер</Font></th>
+    <th><Font face="Segoe Print" size=6 color="white">П'ятниця</Font></th>
   </tr>
   <tr>
-    <td>2</td>
-    <td>Укр.літ.</td>
-    <td>Геометрія</td>
-    <td>Пол.м.</td>
-    <td>Англ.м./Географія</td>
-    <td>Алгебра</td>
+    <td><Font face="Segoe Print" size=4 color="white">1</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Укр.м.</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Геометрія</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Інформатика</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Ф-ра</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Укр.літ.</Font></td>
   </tr>
   <tr>
-    <td>3</td>
-    <td>Ф-ра</td>
-    <td>Укр.м.</td>
-    <td>Правознавство</td>
-    <td>Географія</td>
-    <td>Англ.м.</td>
+    <td><Font face="Segoe Print" size=4 color="white">2</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Укр.літ.</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Геометрія</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Пол.м.</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Англ.м./Географія</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Алгебра</Font></td>
   </tr>
   <tr>
-    <td>4</td>
-    <td>Осн.Здр.</td>
-    <td>Хр.ет./Історія</td>
-    <td>Хімія</td>
-    <td>Фізика</td>
-    <td>Праця</td>
+    <td><Font face="Segoe Print" size=4 color="white">3</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Ф-ра</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Укр.м.</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Правознавство</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Географія</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Англ.м.</Font></td>
   </tr>
   <tr>
-    <td>5</td>
-    <td>Хімія</td>
-    <td>Історія</td>
-    <td>Ф-ра/td>
-    <td>Біологія/td>
-    <td>Зарубіж.</td>
+    <td><Font face="Segoe Print" size=4 color="white">4</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Осн.Здр.</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Хр.ет./Історія</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Хімія</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Фізика</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Праця</Font></td>
   </tr>
   <tr>
-    <td>6</td>
-    <td>Пол.м.</td>
-    <td>Фізика</td>
-    <td>Зарубіж.</td>
-    <td>Алгебра</td>
-    <td>Фізика</td>
+    <td><Font face="Segoe Print" size=4 color="white">5</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Хімія</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Історія</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Ф-ра</Font><td>
+    <td><Font face="Segoe Print" size=4 color="white">Біологія</Font><td>
+    <td><Font face="Segoe Print" size=4 color="white">Зарубіж.</Font></td>
   </tr>
   <tr>
-    <td>7</td>
-    <td>Англ.м.</td>
-    <td>Біологія</td>
-    <td>Мистецтво</td>
-    <td>Всесвітня</td>
-    <td>Інформатика</td>
-    </tr></Font>
+    <td><Font face="Segoe Print" size=4 color="white">6</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Пол.м.</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Фізика</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Зарубіж.</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Алгебра</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Фізика</Font></td>
+  </tr>
+  <tr>
+    <td><Font face="Segoe Print" size=4 color="white">7</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Англ.м.</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Біологія</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Мистецтво</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Всесвітня</Font></td>
+    <td><Font face="Segoe Print" size=4 color="white">Інформатика</Font></td>
+    </tr>
   </table>
   </body>
 </html>
