--- a/Tema3/index2/index21.html
+++ b/Tema3/index2/index21.html
@@ -3,7 +3,7 @@
   <p align=center><Font face="Segoe Print" size=7 color=#138D75>Розклад уроків у школі</Font></p>
 </head>
 <body>
-<table align=center border=5px bordercolor="white" background="https://st2.depositphotos.com/1273403/7705/i/950/depositphotos_77051507-stock-photo-turquoise-brick-background.jpg" cols=6>
+<table align=center border=3px bordercolor="white" background="https://st2.depositphotos.com/1273403/7705/i/950/depositphotos_77051507-stock-photo-turquoise-brick-background.jpg" cols=6 height=65%>
   <tr>
     <th bordercolor="white"><Font face="Segoe Print" size=6 color="white">Номер уроку</Font></th>
     <th bordercolor="white"><Font face="Segoe Print" size=6 color="white">Понеділок</Font></th>
