--- a/Tema3/index2/index21.html
+++ b/Tema3/index2/index21.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <p align=center><Font face="Segoe Print" size=7 color=#138D75>Розклад уроків у школі</Font></p>
+  <p align=center><Font face="Segoe Print" size=7 color=#138D75><b>Розклад уроків у школі</b></Font></p>
 </head>
 <body>
 <table align=center border=3px bordercolor="white" background="https://st2.depositphotos.com/1273403/7705/i/950/depositphotos_77051507-stock-photo-turquoise-brick-background.jpg" cols=6 height=65%>
