--- a/Tema3/index2/index22.html
+++ b/Tema3/index2/index22.html
@@ -3,7 +3,7 @@
 <Font face="Arial Narrow" size=7 color="black">Табель успішності
 </head>
 <body>
-<table align=center border=3 px>
+<table align=center border=3 px cols=3>
 <tr>
 <th rowspan=2 bgcolor="#5499C7"><Font face="Arial Narrow" size=6 color="white">Предмет</Font></th>
 <th bgcolor="#5499C7"><Font face="Arial Narrow" size=6 color="white">Бали</Font></th>
