--- a/Tema3/index2/index22.html
+++ b/Tema3/index2/index22.html
@@ -3,7 +3,7 @@
   <p align=center><Font face="Arial Narrow" size=7 color="black">Табель успішності</Font></p>
 </head>
 <body>
-<table align=center border=3 px cols=3>
+<table align=center border=3 px>
 <tr>
 <th rowspan=2 bgcolor="#5499C7"><Font face="Arial Narrow" size=6 color="white">Предмет</Font></th>
 <th colspan=2 bgcolor="#5499C7"><Font face="Arial Narrow" size=6 color="white">Бали</Font></th>
@@ -30,7 +30,7 @@
 <tr>
 <td><Font face="Arial Narrow" size=5 color="black">Англійська мова</Font></td>
 <td><Font face="Arial Narrow" size=5 color="black">12</Font></td>
-<td><Font face="Arial Narrow" size=5 color="black-Font></td>
+<td><Font face="Arial Narrow" size=5 color="black-Font>-</td>
 </tr>
 <tr>
 <td><Font face="Arial Narrow" size=5 color="black">Польська мова</Font></td>
