--- a/Tema3/index2/index22.html
+++ b/Tema3/index2/index22.html
@@ -30,7 +30,7 @@
 <tr>
 <td><Font face="Arial Narrow" size=5 color="black">Англійська мова</Font></td>
 <td><Font face="Arial Narrow" size=5 color="black">12</Font></td>
-<td><Font face="Arial Narrow" size=5 color="black-Font>-</td>
+<td><Font face="Arial Narrow" size=5 color="black">-</Font></td>
 </tr>
 <tr>
 <td><Font face="Arial Narrow" size=5 color="black">Польська мова</Font></td>
@@ -89,7 +89,7 @@
 </tr><tr>
 <td><Font face="Arial Narrow" size=5 color="black">Мистецтво</Font></td>
 <td><Font face="Arial Narrow" size=5 color="black">11</Font></td>
-<td><Font face="Arial Narrow" size=5 color="black>-</Font></td>
+<td><Font face="Arial Narrow" size=5 color="black">-</Font></td>
 </tr>
 <tr>
 <td><Font face="Arial Narrow" size=5 color="black">Трудове навчання</Font></td>
