--- a/Tema3/index2/index22.html
+++ b/Tema3/index2/index22.html
@@ -107,7 +107,7 @@
 <td><Font face="Arial Narrow" size=5 color="black">-</Font></td>
 </tr>
 <tr>
-<td colspan=2 bgcolor="#5499C7"><Font face="Arial Narrow" size=6 color="white">Приблизний середній бал</Font></td>
+<th colspan=2 bgcolor="#5499C7"><Font face="Arial Narrow" size=6 color="white">Приблизний середній бал</Font></th>
 <td><Font face="Arial Narrow" size=5 color="black">11,05</Font></td>
 </tr>
 </table>
