--- a/Tema4/index1.html
+++ b/Tema4/index1.html
@@ -12,11 +12,10 @@
 <tr>
 <td></td>
 <td colspan=2></td>
-<td></td>
 </tr>
 <tr>
 <td colspan=2></td>
-<td></td>
+<td colspan=2></td>
 </tr>
 </table>
 </body>
