--- a/Tema4/index1.html
+++ b/Tema4/index1.html
@@ -7,14 +7,18 @@
 <body>
 <table width=100% height=100% border=3 cols=3>
 <tr>
-<td colspan=3></td>
+<td colspan=3><img src="https://lh3.googleusercontent.com/7boreNRHU5YY263wCNmfk2H8Sb4msv5xc1JANbv21mbeqa1Em8P2Q1tU3MyE_JMP5rMyZw=s85Біологія">
+  <Font face="Arial Black" size=7 color="#138D75">Біологія</Font></td>
 </tr>
 <tr>
-<td></td>
-<td colspan=2></td>
+<td bgcolor="#FDEBD0">
+  <a href="index1/index11.html"><Font face="Arial Black" size=6 color="#16A085">Ботаніка</a><br>
+  <a href="index1/index12.html"><Font face="Arial Black" size=6 color="#16A085">Зоологія</a><br>
+  <a href="index1/index13.html"><Font face="Arial Black" size=6 color="#16A085">Анатомія</a></td>
+<td colspan=2><Font face="Arial Black" size=6 color="#1ABC9C">Біологія - наука про життя у всіх його проявах</Font></td>
 </tr>
 <tr>
-<td colspan=2></td>
+  <td colspan=2><Font face="Arial Black" size=6 color="#1ABC9C">Контакти</Font></td>
 <td colspan=2></td>
 </tr>
 </table>
