--- a/Tema4/index1.html
+++ b/Tema4/index1.html
@@ -7,7 +7,7 @@
 <body>
 <table width=100% height=100% border=3 cols=3>
 <tr>
-<td colspan=3><img src="https://lh3.googleusercontent.com/7boreNRHU5YY263wCNmfk2H8Sb4msv5xc1JANbv21mbeqa1Em8P2Q1tU3MyE_JMP5rMyZw=s85Біологія">
+<td colspan=3><img src="http://rubezhnoe.com/images/photos/small/article12907.jpg" alt="Біологія">
   <Font face="Arial Black" size=7 color="#138D75">Біологія</Font></td>
 </tr>
 <tr>
