--- a/Tema4/index1.html
+++ b/Tema4/index1.html
@@ -7,19 +7,19 @@
 <body>
 <table width=100% height=100% border=3 cols=3>
 <tr height=20%> 
-<td colspan=3><img src="http://rubezhnoe.com/images/photos/small/article12907.jpg" height=20% width=15% alt="Біологія">
-  <Font face="Segoe Print" size=7 color="#1E8449">Біологія</Font></td>
+<td colspan=3 bgcolor="#1D8348"><img src="http://rubezhnoe.com/images/photos/small/article12907.jpg" height=20% width=10% alt="Біологія">
+  <Font face="Segoe Print" size=7 color="white">Біологія</Font></td>
 </tr>
 <tr height=70%>
-<td bgcolor="#FEF5E7" width=30%>
-  <a href="index1/index11.html"><Font face="Segoe Print" size=6 color="#229954">Ботаніка</a><br>
-  <a href="index1/index12.html"><Font face="Segoe Print" size=6 color="#229954">Зоологія</a><br>
-  <a href="index1/index13.html"><Font face="Segoe Print" size=6 color="#229954">Анатомія</a></td>
+<td bgcolor="#7DCEA0" width=30%>
+  <a href="index1/index11.html"><Font face="Segoe Print" size=6 color="#1D8348">Ботаніка</a><br>
+  <a href="index1/index12.html"><Font face="Segoe Print" size=6 color="#1D8348">Зоологія</a><br>
+  <a href="index1/index13.html"><Font face="Segoe Print" size=6 color="#1D8348">Анатомія</a></td>
 <td colspan=2><Font face="Segoe Print" size=6 color="#424949">Біологія - наука про життя у всіх його проявах</Font></td>
 </tr>
-<tr height=10% bgcolor="#FEF5E7">
-  <td colspan=2><Font face="Segoe Print" size=6 color="#229954">Контакти:</Font></td>
-<td colspan=2><Font face="Segoe Print" size=6 color="#424949">Email-адреса: 0506yuliagaba@gmail.com<br>Телефон:0952089078</Font></td>
+<tr height=10%>
+  <td colspan=2 bgcolor="#1D8348"><Font face="Segoe Print" size=6 color="white">Контакти:</Font></td>
+<td colspan=2 bgcolor="#1D8348"><Font face="Segoe Print" size=6 color="white">Email-адреса: 0506yuliagaba@gmail.com<br>Телефон:0952089078</Font></td>
 </tr>
 </table>
 </body>
