--- a/Tema4/index1.html
+++ b/Tema4/index1.html
@@ -11,15 +11,15 @@
   <Font face="Segoe Print" size=7 color="white">Біологія</Font></td>
 </tr>
 <tr height=70%>
-<td bgcolor="#7DCEA0" width=30%>
+<td bgcolor="#E9F7EF" width=30%>
   <a href="index1/index11.html"><Font face="Segoe Print" size=6 color="#1D8348">Ботаніка</a><br>
   <a href="index1/index12.html"><Font face="Segoe Print" size=6 color="#1D8348">Зоологія</a><br>
   <a href="index1/index13.html"><Font face="Segoe Print" size=6 color="#1D8348">Анатомія</a></td>
 <td colspan=2><Font face="Segoe Print" size=6 color="#424949">Біологія - наука про життя у всіх його проявах</Font></td>
 </tr>
 <tr height=10%>
-  <td colspan=2 bgcolor="#1D8348"><Font face="Segoe Print" size=6 color="white">Контакти:</Font></td>
-<td colspan=2 bgcolor="#1D8348"><Font face="Segoe Print" size=6 color="white">Email-адреса: 0506yuliagaba@gmail.com<br>Телефон:0952089078</Font></td>
+  <td colspan=2 bgcolor="#E9F7EF"><Font face="Segoe Print" size=6 color="#1D8348">Контакти:</Font></td>
+<td colspan=2 bgcolor="#E9F7EF"><Font face="Segoe Print" size=6 color="#1D8348">Email-адреса: 0506yuliagaba@gmail.com<br>Телефон:0952089078</Font></td>
 </tr>
 </table>
 </body>
