--- a/Tema4/index1.html
+++ b/Tema4/index1.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <table width=100% height=100% border=3 cols=3>
-<tr height=20%> 
-<td colspan=3 bgcolor="#1D8348"><img src="http://rubezhnoe.com/images/photos/small/article12907.jpg" height=20% width=10% alt="Біологія">
-  <Font face="Segoe Print" size=7 color="white">Біологія</Font></td>
+<tr height=25%> 
+<td colspan=3 bgcolor="#1D8348"><img src="http://rubezhnoe.com/images/photos/small/article12907.jpg" height=25% width=15% alt="Біологія">
+  <p align=center><Font face="Segoe Print" size=7 color="white">Біологія</Font></p></td>
 </tr>
 <tr height=70%>
 <td bgcolor="#E9F7EF" width=30%>
