--- a/Tema4/index1.html
+++ b/Tema4/index1.html
@@ -8,7 +8,7 @@
 <table width=100% height=100% border=3 cols=3>
 <tr height=25% background="https://st.depositphotos.com/1044545/1837/v/950/depositphotos_18379891-stock-illustration-biology-sketches-on-school-board.jpg"> 
 <td colspan=3>
-  <p align=center valign=middle><Font face="Segoe Print" size=7 color="white">Біологія</Font></p></td>
+  <p align=left valign=middle><Font face="Segoe Print" size=7 color="white"><b>Біологія</b></Font></p></td>
 </tr>
 <tr height=70%>
 <td bgcolor="#E9F7EF" width=30%>
