--- a/Tema4/index1/index11.html
+++ b/Tema4/index1/index11.html
@@ -12,9 +12,9 @@
 </tr>
 <tr height=70%>
 <td bgcolor="#E9F7EF" width=30%>
-  <a href="index1/index11.html"><Font face="Segoe Print" size=6 color="#1D8348">Ботаніка</a><br>
-  <a href="index1/index12.html"><Font face="Segoe Print" size=6 color="#1D8348">Зоологія</a><br>
-  <a href="index1/index13.html"><Font face="Segoe Print" size=6 color="#1D8348">Анатомія</a></td>
+  <a href="index11.html"><Font face="Segoe Print" size=6 color="#1D8348">Ботаніка</a><br>
+  <a href="index12.html"><Font face="Segoe Print" size=6 color="#1D8348">Зоологія</a><br>
+  <a href="index13.html"><Font face="Segoe Print" size=6 color="#1D8348">Анатомія</a></td>
 <td colspan=2><Font face="Segoe Print" size=6 color="#424949">Ботаніка - розділ біології, що вивчає рослини, гриби і водорості: їх будову, життєдіяльність, розмноження, хвороби, історію розвитку, географічне поширення, класифікацію тощо, а також структуру, розвиток і розміщення на земній кулі рослинних угруповань.</Font></td>
 </tr>
 <tr height=10%>
