--- a/Tema4/index2/index22.html
+++ b/Tema4/index2/index22.html
@@ -6,9 +6,9 @@
 </head>
 <frameset>
 <frame src="logo.html" name="logo">
-<frameset rows=100% cols=65%>
+<frameset rows=30% cols=65%>
 <frame src="menu.html" name="menu">
-<frame src="content.html" name="content">
+<frame name="content">
 <frameset rows=100% cols=10%>
 <frame src="contact.html" name="contact"
 </frameset>
