--- a/Tema4/index2/index22.html
+++ b/Tema4/index2/index22.html
@@ -1,15 +1,15 @@
 <html>
 <head>
-<title>
-Фрейми
-</title>
+  <meta chrswt="utf-8">
+  <title>
+    Фрейми
+  </title>
 </head>
-<frameset>
-<frame src="logo.html" name="logo">
-<frameset rows=30% cols=65%>
-<frame src="menu.html" name="menu">
-<frame name="content">
-<frameset rows=30% cols=10%>
+  <frameset>
+    <frame src="logo.html" name="logo"
+  <frameset rows=30% cols=65%>
+    <frame src="menu.html" name="menu">
+    <frame name="content">
 </frameset>
 </frameset>
 </html>
