--- a/Tema4/index2.html
+++ b/Tema4/index2.html
@@ -3,7 +3,7 @@
 Домашня робота
 </head>
 <body>
-<a href="index2/index21.html">Варіант 1(за зразком веб-сторінок)</a>
+<a href="index2/index21.html">Варіант 1(за зразком веб-сторінок)</a><br>
 <a href="index2/index22.html">Варіант 2(за зразком гіпертексту)</a>
 </body>
 </html>
