--- a/Tema4/index1.html
+++ b/Tema4/index1.html
@@ -5,21 +5,26 @@
 </title>
 </head>
 <body>
-<table width=100% height=100% border=3 cols=3>
+<table width=100% height=100% border=3 cols=4>
 <tr height=25% background="https://st.depositphotos.com/1044545/1837/v/950/depositphotos_18379891-stock-illustration-biology-sketches-on-school-board.jpg"> 
-<td colspan=3>
-  <p align=left valign=middle><Font face="Segoe Print" size=7 color="white"><b>Біологія</b></Font></p></td>
+  <td></td>
+  <td colspan=2>
+  <p align=left valign=middle><Font face="Segoe Print" size=7 color="white"><b>Біологія</b></Font></p>
+  </td>
+  <td></td>
 </tr>
-<tr height=70%>
-<td bgcolor="#E9F7EF" width=30%>
-  <a href="index1/index11.html"><Font face="Segoe Print" size=6 color="#1D8348">Ботаніка</a><br>
-  <a href="index1/index12.html"><Font face="Segoe Print" size=6 color="#1D8348">Зоологія</a><br>
-  <a href="index1/index13.html"><Font face="Segoe Print" size=6 color="#1D8348">Анатомія</a></td>
-<td colspan=2><Font face="Segoe Print" size=6 color="#424949">Біологія - наука про життя у всіх його проявах</Font></td>
+<tr height=65%%>
+  <td></td>
+  <td colspan=2><Font face="Segoe Print" size=6 color="#424949">Біологія - наука про життя у всіх його проявах</Font></td>
+  <td bgcolor="#E9F7EF" width=60% colspan=2>
+    <a href="index1/index11.html"><Font face="Segoe Print" size=6 color="#1D8348">Ботаніка</a><br>
+    <a href="index1/index12.html"><Font face="Segoe Print" size=6 color="#1D8348">Зоологія</a><br>
+    <a href="index1/index13.html"><Font face="Segoe Print" size=6 color="#1D8348">Анатомія</a>
+  </td>
 </tr>
 <tr height=10%>
   <td colspan=2 bgcolor="#E9F7EF"><Font face="Segoe Print" size=6 color="#1D8348">Контакти:</Font></td>
-<td colspan=2 bgcolor="#E9F7EF"><Font face="Segoe Print" size=6 color="#1D8348">Email-адреса: 0506yuliagaba@gmail.com<br>Телефон:0952089078</Font></td>
+  <td colspan=2 bgcolor="#E9F7EF"><Font face="Segoe Print" size=6 color="#1D8348">Email-адреса: 0506yuliagaba@gmail.com<br>Телефон:0952089078</Font></td>
 </tr>
 </table>
 </body>
