--- a/Tema4/index1.html
+++ b/Tema4/index1.html
@@ -14,7 +14,7 @@
   <td width=20%></td>
 </tr>
 <tr height=65%>
-  <td width 20% bgcolor="#E9F7EF">
+  <td width=20% bgcolor="#E9F7EF">
    <a href="index1/index11.html"><Font face="Segoe Print" size=6 color="#1D8348">Ботаніка</a><br>
    <a href="index1/index12.html"><Font face="Segoe Print" size=6 color="#1D8348">Зоологія</a><br>
    <a href="index1/index13.html"><Font face="Segoe Print" size=6 color="#1D8348">Анатомія</a></td>
