--- a/Tema4/index1/index13.html
+++ b/Tema4/index1/index13.html
@@ -5,21 +5,23 @@
 </title>
 </head>
 <body>
-<table width=100% height=100% border=3 cols=3>
+<table width=100% height=100% border=3 cols=4>
 <tr height=25% background="https://st.depositphotos.com/1044545/1837/v/950/depositphotos_18379891-stock-illustration-biology-sketches-on-school-board.jpg"> 
-<td colspan=3>
-  <p align=left valign=middle><Font face="Segoe Print" size=7 color="white"><b>Біологія</b></Font></p></td>
+  <td width=20%></td>
+  <td colspan=2 width=60%>
+  <p align=left valign=middle><Font face="Segoe Print" size=7 color="white"><b>Біологія</b></Font></p>
+  </td>
+  <td width=20%></td>
 </tr>
-<tr height=70%>
-<td bgcolor="#E9F7EF" width=30%>
-  <a href="index1/index11.html"><Font face="Segoe Print" size=6 color="#1D8348">Ботаніка</a><br>
-  <a href="index1/index12.html"><Font face="Segoe Print" size=6 color="#1D8348">Зоологія</a><br>
-  <a href="index1/index13.html"><Font face="Segoe Print" size=6 color="#1D8348">Анатомія</a></td>
-<td colspan=2><Font face="Segoe Print" size=6 color="#424949">Анатомія — це наука про форму, будову організму та окремих його органів чи систем. Загальний термін анатомія охоплює анатомію людини, або антропотомія (грец. ἄνθρωπος — людина та грец. τέμνω — різати), анатомію тварин, або зоотомію, та анатомію рослин, або фітотомію.</Font></td>
+<tr height=65%>
+  <td width=20% bgcolor="#E9F7EF"></td>
+  <td colspan=2 width=60%><Font face="Segoe Print" size=6 color="#424949">Анатомія — це наука про форму, будову організму та окремих його органів чи систем. Загальний термін анатомія охоплює анатомію людини, або антропотомія (грец. ἄνθρωπος — людина та грец. τέμνω — різати), анатомію тварин, або зоотомію, та анатомію рослин, або фітотомію.</Font></td>
+  <td bgcolor="#E9F7EF" width=20%>
+  </td>
 </tr>
 <tr height=10%>
-  <td colspan=2 bgcolor="#E9F7EF"><Font face="Segoe Print" size=6 color="#1D8348">Контакти:</Font></td>
-<td colspan=2 bgcolor="#E9F7EF"><Font face="Segoe Print" size=6 color="#1D8348">Email-адреса: 0506yuliagaba@gmail.com<br>Телефон:0952089078</Font></td>
+  <td colspan=2 bgcolor="#E9F7EF" width=50%><Font face="Segoe Print" size=6 color="#1D8348">Контакти:</Font></td>
+  <td colspan=2 bgcolor="#E9F7EF" width=50%><Font face="Segoe Print" size=6 color="#1D8348">Email-адреса: 0506yuliagaba@gmail.com<br>Телефон:0952089078</Font></td>
 </tr>
 </table>
 </body>
