--- a/Tema4/index2/index22.html
+++ b/Tema4/index2/index22.html
@@ -7,7 +7,7 @@
 </head>
   <frameset>
     <frame src="logo.html" name="logo"
-  <frameset rows="30%" cols="65%">
+  <frameset>
     <frame src="menu.html" name="menu">
     <frame name="content">
 </frameset>
