--- a/Tema4/index2/index22.html
+++ b/Tema4/index2/index22.html
@@ -6,7 +6,7 @@
   </title>
 </head>
   <frameset>
-    <frame src="logo.html" name="logo"
+    <frame src="logo.html" name="logo">
   <frameset>
     <frame src="menu.html" name="menu">
     <frame name="content">
