--- a/Tema4/index2/index22.html
+++ b/Tema4/index2/index22.html
@@ -5,7 +5,7 @@
     Фрейми
   </title>
 </head>
-  <frameset rows="100%" cols="25%>
+  <frameset rows="100%" cols="25%">
     <frame src="logo.html" name="logo">
   <frameset>
     <frame src="menu.html" name="menu">
