--- a/Tema4/index2/index22.html
+++ b/Tema4/index2/index22.html
@@ -7,7 +7,7 @@
 </head>
   <frameset rows="100%" cols="25%">
     <frame src="logo.html" name="logo">
-  <frameset>
+  <frameset rows="100%" cols="75%">
     <frame src="menu.html" name="menu">
     <frame name="content">
 </frameset>
