--- a/Tema4/index2/index22.html
+++ b/Tema4/index2/index22.html
@@ -5,9 +5,9 @@
     Фрейми
   </title>
 </head>
-  <frameset rows="100%" cols="25%">
+  <frameset cols="25%">
     <frame src="logo.html" name="logo">
-  <frameset rows="100%" cols="75%">
+  <frameset cols="75%">
     <frame src="menu.html" name="menu">
     <frame name="content">
 </frameset>
