--- a/Tema4/index2/index21.html
+++ b/Tema4/index2/index21.html
@@ -5,11 +5,10 @@
 </title>
 </head>
 <body>
-<Font face="Arial Black" size=7 color="#8E44AD">Структурування веб сайтів</Font>
+  <p align=center><Font face="Arial Black" size=7 color="#8E44AD">Структурування веб сайтів</Font></p>
 <ul>
 <li><a href="index21/index211.html"><Font face="Arial Black" size=6 color="#5499C7">Що таке веб-сторінка?</Font></a></li>
 <li><a href="index21/index212.html"><Font face="Arial Black" size=6 color="#5499C7">Що таке веб-сайт?</Font></a></li>
-<li>Типові макети сайту</li>
 </ul>
 </body>
 </html>
