--- a/Tema4/index2/index21/index211.html
+++ b/Tema4/index2/index21/index211.html
@@ -5,7 +5,7 @@
 </title>
 </head>
 <body>
-<Font face="Arial Black" size=7 color="#8E44AD">Веб-сторінка</Font>
-<Font face="Arial Black" size=5 color="#5499C7">Веб-сторінка — інформаційний ресурс, доступний в мережі World Wide Web (Всесвітня павутина), який можна переглянути у веб-браузері. Зазвичай, інформація веб-сторінки записана у форматі HTML, XHTML, або рідше Wml (для wap-сторінок).</Font>
+  <p align=center><Font face="Arial Black" size=7 color="#8E44AD">Веб-сторінка</Font></p><br>
+<p><Font face="Arial Black" size=5 color="#5499C7">Веб-сторінка — інформаційний ресурс, доступний в мережі World Wide Web (Всесвітня павутина), який можна переглянути у веб-браузері. Зазвичай, інформація веб-сторінки записана у форматі HTML, XHTML, або рідше Wml (для wap-сторінок).</Font></p>
 </body>
 </html>
