--- a/Tema4/index2/index22.html
+++ b/Tema4/index2/index22.html
@@ -9,7 +9,7 @@
   <frame src="logo.html" name="logo" scrolling="no" noresize>
   <frameset cols="20%, *">
     <frame src="menu.html" name="menu">
-    <frame src="CONTENT.html" name="CONTENT">
+    <frame name="CONTENT">
   </frameset>
 </frameset>
 </html>
