--- a/Tema4/index2/index13.html
+++ b/Tema4/index2/index13.html
@@ -1,7 +1,9 @@
 <!DOCTYPE  HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
 <head>
+  <title>
 Анатомія
+  </title>
 </head>
 <body>
 <Font face="Segoe Print" size=6 color="#424949">Анатомія — це наука про форму, будову організму та окремих його органів чи систем. Загальний термін анатомія охоплює анатомію людини, або антропотомія (грец. ἄνθρωπος — людина та грец. τέμνω — різати), анатомію тварин, або зоотомію, та анатомію рослин, або фітотомію.
