--- a/Tema4/index2/index13.html
+++ b/Tema4/index2/index13.html
@@ -6,7 +6,7 @@
   </title>
 </head>
 <body>
-<Font face="Segoe Print" size=6 color="#424949">Анатомія — це наука про форму, будову організму та окремих його органів чи систем. Загальний термін анатомія охоплює анатомію людини, або антропотомія (грец. ἄνθρωπος — людина та грец. τέμνω — різати), анатомію тварин, або зоотомію, та анатомію рослин, або фітотомію.
+<Font face="Segoe Print" size=6 color="#424949">Анатомія — це наука про форму, будову організму та окремих його органів чи систем. Загальний термін анатомія охоплює анатомію людини, або антропотомія, анатомію тварин, або зоотомію, та анатомію рослин, або фітотомію.
 </Font>
 </body>
 </html>
