--- a/Tema5/index2/index22/index221.html
+++ b/Tema5/index2/index22/index221.html
@@ -5,8 +5,8 @@
 </title>
 </head>
 <body>
-<Font face="Arial Narrow" size=7 color="#2471A3">Монітор</Font><Font face="Arial Narrow" size=6 color="#5499C7">  — електронний пристрій для відображення інформації.</Font>
-<ul><Font face="Arial Narrow" size=6 color="#2471A3">Сучасні монітори бувають кількох типів:</Font>
+  <p><Font face="Arial Narrow" size=7 color="#2471A3"><b>Монітор</b></Font><Font face="Arial Narrow" size=6 color="#5499C7">  — електронний пристрій для відображення інформації.</Font></p>
+  <ul><Font face="Arial Narrow" size=6 color="#2471A3"><b>Сучасні монітори бувають кількох типів:</b></Font>
 <Font face="Arial Narrow" size=5 color="#5499C7"><li>на основі електронно-променевої трубки (CRT)</li>
 <li>рідкокристалічні (LCD, TFT як підвид LCD)</li>
 <li>плазмові</li>
