--- a/Tema5/index2/index22.html
+++ b/Tema5/index2/index22.html
@@ -10,7 +10,7 @@
 <p><map name="Будова комп'ютера">
 <area shape="poly" alt="Монітор" coords="260, 66, 480, 58, 465, 295, 246, 258" href="index22/index221.html">
 <area shape="rect" alt="Системний блок" coords="573, 24, 677, 348" href="index22/index222.html">
-<area shape="poly" alt="Клавіатура" coords="153, 311, 510, 378, 456, 504, 50, 378" href="index22/index223.html>
+<area shape="poly" alt="Клавіатура" coords="153, 311, 510, 378, 456, 504, 50, 378" href="index22/index223.html">
 </map></p>
 </body>
 </html>
