--- a/Tema5/index1.html
+++ b/Tema5/index1.html
@@ -7,10 +7,10 @@
 <body bgcolor="#8E44AD">
 <p align=center><Font face="Segoe Print" size=7 color="white">Сайт Габи Юлії Сергіївни</Font></p>
 <hr size=3 color="white">
-<p align=center><Font face="Segoe Print" size=6 color="#F4ECF7">Фотографії</Font></p>
+<p align=center><a href="index1/index11.html"><Font face="Segoe Print" size=6 color="#F4ECF7">Фотографії</Font></a></p>
 <hr size=3 color="white">
-<p align=center><Font face="Segoe Print" size=6 color="#F4ECF7">Музика</Font></p>
+<p align=center><a href="index1/index12.html"><Font face="Segoe Print" size=6 color="#F4ECF7">Музика</Font></a></p>
 <hr size=3 color="white">
-<p align=center><Font face="Segoe Print" size=6 color="#F4ECF7">Відео</Font></p>
+<p align=center><a href="index1/index13.html"><Font face="Segoe Print" size=6 color="#F4ECF7">Відео</Font></a></p>
 </body>
 </html>
