--- a/Tema5/index1.html
+++ b/Tema5/index1.html
@@ -12,5 +12,6 @@
 <p align=center><a href="index1/index12.html"><Font face="Segoe Print" size=6 color="#F4ECF7">Музика</Font></a></p>
 <hr size=3 color="white">
 <p align=center><a href="index1/index13.html"><Font face="Segoe Print" size=6 color="#F4ECF7">Відео</Font></a></p>
+<hr size=3 color="white">
 </body>
 </html>
