--- a/Tema5/index1/index11.html
+++ b/Tema5/index1/index11.html
@@ -8,9 +8,9 @@
 <table bgcolor="#48C9B0">
 <caption><p align=center><Font face="Segoe Print" size=7 color="white">Фотографії</Font></p></caption>
 <tr>
-<td><img src="https://static.iledebeaute.ru/files/images/imgsng/part_20/410785/src/120420112440.jpeg" alt="Фотографії"></td>
-<td><img src="https://cdn.allwallpaper.in/wallpapers/2400x1350/8358/plants-warm-colors-2400x1350-wallpaper.jpg" alt="Фотографії"></td>
-<td><img scr="https://www.kath-kirche-kaernten.at/images/slideshows/23644/hydrangeas__xxlarge.jpg" alt="Фотографії"></td>
+<td><img src="https://static.iledebeaute.ru/files/images/imgsng/part_20/410785/src/120420112440.jpeg" alt="Фотографії" width="500" height="374"></td>
+<td><img src="http://www.cs.tlu.ee/~kristjan/kasutajaliidesed/tunnid/T0900/VI%20tund/isotope/Chrysanthemum.jpg" alt="Фотографії" width="300" height="400"></td>
+<td><img scr="https://www.tipdebrabantsekempen.nl/clients/vvvbrabantsekempen/themes/uploads/companies/87488bf5-9e37-4eca-9821-f436de0899ba.jpg" alt="Фотографії" width="500" height="375"></td>
 </tr>
 </table>
 </body>
