--- a/Tema5/index1/index11.html
+++ b/Tema5/index1/index11.html
@@ -10,7 +10,7 @@
 <tr>
 <td><img src="https://static.iledebeaute.ru/files/images/imgsng/part_20/410785/src/120420112440.jpeg" alt="Фотографії" width="500" height="374"></td>
 <td><img src="http://www.cs.tlu.ee/~kristjan/kasutajaliidesed/tunnid/T0900/VI%20tund/isotope/Chrysanthemum.jpg" alt="Фотографії" width="300" height="400"></td>
-<td><img scr="https://www.tipdebrabantsekempen.nl/clients/vvvbrabantsekempen/themes/uploads/companies/87488bf5-9e37-4eca-9821-f436de0899ba.jpg" alt="Фотографії" width="500" height="375"></td>
+<td><img scr="https://dl.backbook.me/full/d0e06b4b9a.jpg" alt="Фотографії" width="400" height="300"></td>
 </tr>
 </table>
 </body>
