--- a/Tema5/index1/index11.html
+++ b/Tema5/index1/index11.html
@@ -5,7 +5,7 @@
 </title>
 </head>
 <body bgcolor="#48C9B0">
-<table bgcolor="#48C9B0">
+<table bgcolor="#48C9B0" width="1300" height="1149">
 <caption><p align=center><Font face="Segoe Print" size=7 color="white">Фотографії</Font></p></caption>
 <tr>
 <td><img src="https://static.iledebeaute.ru/files/images/imgsng/part_20/410785/src/120420112440.jpeg" alt="Фотографії" width="500" height="374"></td>
