--- a/Tema5/index1/index12.html
+++ b/Tema5/index1/index12.html
@@ -5,8 +5,9 @@
 </title>
 </head>
 <body bgcolor="#14C9B0">
-Музика
-Trek 1<link href="http://ol3.mp3party.net/online/3750/3750155.mp3">
+  <p align=center><Font face="Segoe Print" size=7 color="white">Музика</Font></p>
+  <p><Font face="Segoe Print" size=5 color="white">Trek 1</Font><br>
+    <link href="http://ol3.mp3party.net/online/3750/3750155.mp3" title="Guns N'Roses - November rain" type="audio/mpeg3">
 Trek 2<embed src="http://ol3.mp3party.net/online/3750/3750155.mp3">
 Trek 3<object data="http://ol3.mp3party.net/online/3750/3750155.mp3" type="audio/mpeg3"></object>
 Trek 4<audio src="http://ol3.mp3party.net/online/3750/3750155.mp3"></audio>
